[project]
name = "ryan-tool"
version = "1.0.8"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "database_errors",
    "configuration",
    "model_basic",
    "custom-select",
]

[tool.uv.workspace]
members = [
    "src/database_errors",
    "src/configuration",
    "src/model_basic",
    "src/custom_select",
]

[tool.uv.sources]
database_errors = { workspace = true }
configuration = { workspace = true }
model_basic = { workspace = true }
custom-select = { workspace = true }

