[project]
name = "ryan-tool"
version = "1.0.9"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "database_errors",
    "configuration",
    "model_basic",
    "custom-select",
]

[tool.uv.sources]
database_errors = { workspace = true }
configuration = { workspace = true }
model_basic = { workspace = true }
custom-select = { workspace = true }

