[project]
name = "ryan-tool"
version = "1.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [

]

[tool.uv.workspace]
members = [
    "src/database_errors",
    "src/configuration",
    "src/model_basic",
    "src/custom_select",
]

[tool.uv.sources]
database_errors = { workspace = true }
configuration = { workspace = true }
model_basic = { workspace = true }
custom-select = { workspace = true }

